src/test/deca/syntax/valid/print_all_types.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    6
//    true
//    6.6
//    false
//
// Historique:
//    cree le 01/01/2025

{
        println(6);
        println(true);
        println(6.6);
        println(false);
}
