src/test/deca/syntax/invalid/print_bad_float.deca
// Description:
//    Programme minimaliste utilisant println.
//
//
// Historique:
//    cree le 01/01/2025

{
        println(6.);
}